# qml_formatter

./: .pre-commit-hooks.yaml  .rustfmt.toml  Cargo.toml  README.md  build.rs  data_creator.py
.github/workflows/: build.yml  build_linux.yml  build_windows.yml  clippy.yml  linux.yml  test.yml
src/: help_functions.rs  main.rs  rules.rs  split_text_into_parts_to_read.rs  tests.rs
src/test_data/: 10_multiple_empty_lines_INPUT.qml  10_multiple_empty_lines_OUTPUT.qml  11_empty_line_before_ending_INPUT.qml  11_empty_line_before_ending_OUTPUT.qml  12_if_else_mismatch_OUTPUT.qml  13_if_oneliner_INPUT.qml  13_if_oneliner_OUTPUT.qml  14_different_quotes_OUTPUT.qml  15_square_bracket_INPUT.qml  15_square_bracket_OUTPUT.qml  16_space_after_colon_ternary_INPUT.qml  16_space_after_colon_ternary_OUTPUT.qml  17_no_space_when_between_brackets_INPUT.qml  17_no_space_when_between_brackets_OUTPUT.qml  18_valid_state_brackets_INPUT.qml  19_multiple_closing_brackets_OUTPUT.qml  1_empty_space_at_the_end_INPUT.qml  1_empty_space_at_the_end_OUTPUT.qml  20_multi_line_models_INPUT.qml  20_multi_line_models_OUTPUT.qml  21_switch_case_INPUT.qml  21_switch_case_OUTPUT.qml  23_connect_at_end_line_INPUT.qml  23_connect_at_end_line_OUTPUT.qml  24_ignore_comments_INPUT.qml  25_multiple_question_mark_INPUT.qml  26_bracket_in_comment_OUTPUT.qml  2_empty_lines_at_start_end_INPUT.qml  3_mismatched_space_INPUT.qml  3_mismatched_space_OUTPUT.qml  5_not_mismatched_space_inside_OUTPUT.qml  6_space_after_colon_OUTPUT.qml  7_space_after_colon_in_string_INPUT.qml  7_space_after_colon_in_string_OUTPUT.qml  (+30 more)
